add signup signin

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="" />
   <meta property="og:url" content="" />
   <meta property="og:site_name" content="" />
-  <meta property="og:image" content="../src/assets/img/fb-img-thumbnail.jpg" />
+  <meta property="og:image" content="%PUBLIC_URL%/fb-img-thumbnail.jpg" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
